finished the other buttons. Added hidding for buttons that shouldnt be used yet. have it so that the sprites are moved to the right side after selecting them

--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
             </form>
 
             <div id="littleBox"> 
-                <h2 id="pokemonName">name</h2>
+                <h2 id="pokemonName"></h2>
                 <div id="pokeStuff">
                     <div id="pokeImageBox">
                         <img id="pokemonImage" src="tallgrass.png"/>
                     </div>
                     <div id="pokeStats">
-                        <p id="pokeNum">Num:</p>
-                        <p id="pokeHeight">Height:</p>
-                        <p id="pokeWeight">Weight:</p>
-                        <p id="pokeType">Type:</p>
-                        <p id="pokeAbil">Abilities:</p>
+                        <p id="pokeNum"></p>
+                        <p id="pokeHeight"></p>
+                        <p id="pokeWeight"></p>
+                        <p id="pokeType"></p>
+                        <p id="pokeAbil"></p>
                     </div>
                 </div>
             </div>
@@ -38,12 +38,12 @@
             </div>
         </div>
         <div id="pokeBalls">
+            <img id="ball0" src="pokeball.png"/>
             <img id="ball1" src="pokeball.png"/>
             <img id="ball2" src="pokeball.png"/>
             <img id="ball3" src="pokeball.png"/>
             <img id="ball4" src="pokeball.png"/>
             <img id="ball5" src="pokeball.png"/>
-            <img id="ball6" src="pokeball.png"/>
         </div>
 
     </div>
