Added stats, added selectList

--- a/index.html
+++ b/index.html
@@ -32,10 +32,6 @@
             <div class="pokemonPic">
             </div>
             <div class="row">
-                <h1>Evolutions:</h1>
-                <div class="evolutions">
-
-                </div>
             </div>
         </div>
         <div class="right">
@@ -45,7 +41,39 @@
                 <p class="myType" id="type2"></p>
             </div>
             <div class="attributes">
-                
+                <div class="box">
+                    <div class="header">
+                        <p>Stats</p>
+                        <div class="table">
+                            <table>
+                                <tr>
+                                    <th class="hp">HP: <span id="hp"></span></th>
+                                    <td class="hp"><div class="hpProgress">.</div></td>
+                                </tr>
+                                <tr>
+                                    <th class="attack">Attack: <span id="attack"></span></th>
+                                    <td class="attack"><div class="attackProgress">.</div></td>
+                                </tr>
+                                <tr>
+                                    <th class="defense">Defense: <span id="defense"></span></th>
+                                    <td class="defense"><div class="defenseProgress">.</div></td>
+                                </tr>
+                                <tr>
+                                    <th class="spAtk">Sp. Atk: <span id="spAtk"></span></th>
+                                    <td class="spAtk"><div class="spAtkProgress">.</div></td>
+                                </tr>
+                                <tr>
+                                    <th class="spDef">Sp. Def: <span id="spDef"></span></th>
+                                    <td class="spDef"><div class="spDefProgress">.</div></td>
+                                </tr>
+                                <tr>
+                                    <th class="speed">Speed: <span id="speed"></span></th>
+                                    <td class="speed"><div class="speedProgress">.</div></td>
+                                </tr>
+                            </table>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
