pokemon pics and align css

--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
     <input type="button"  value="Click here" id="searchButton">
   </form>
   <h2 id="pokemonName"></h2>
-  <img id="pokemonImage"/>
-  <img id="pokemonImage2">
+  <div class ='pokemonInfo'>
+    <img id="pokemonImage">
+    <img id="pokemonImage2">
+    <div id="pokemonMoves">
+    <div id="heldItems">
+  </div>
 </body>
 </html>
