--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <h1>Dan's Pokedex</h1>
 
 
-    <div calss = "container">
-        <div calss = "pokeDexBody">
+    <div class = "container">
+        <div class = "pokeDexBody">
             <form>
                 <input type="text"  value="" placeholder="Choose your pokemon!"  id="inputBar">
                 <input type="button"  value="Click here" id="searchButton">
@@ -28,23 +28,11 @@
                 <h2 id="pokemonEvolveFrom"></h2>
                 <h2 id="pokemonType"></h2>
             </ul>
-            <form calss="dexButtons">
+            <form class="dexButtons">
                 <div>
-                    <input type=" button" value="AC">
-                    <input type=" button" value="7">
-                    <input type=" button" value="8">
-                    <input type=" button" value="9">
-                </div>
-                <div>
-                    <input type=" button" value="4">
-                    <input type=" button" value="5">
-                    <input type=" button" value="6">
-                </div>
-                <div>
-                     <input type=" button" value="1">
-                     <input type=" button" value="2">
-                     <input type=" button" value="3">
-                     <input type=" button" value="0">    
+                    <input type=" button" value="C">
+                    <input type=" button" value="E">
+                    
                 </div>
             </form>
         </div>
