--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 
 <body>
-    <h1>Pokemon!</h1>
-
+    <h1></h1>
+    <p></p>
     <header>
     
         <form>
@@ -20,7 +20,8 @@
             <input type="button"  value="Catch em!" id="searchButton">
         </form>
         <h2 id="pokemonName"> </h2>
-        <img id="pokemonImage"/>
+        <img id="pokemonImage" width = "300" height = "300"/>
+        <h3 id="pokemonWeight"></h3>
 
     </header>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
