most things working

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="header">
         <h1>Pokedex</h1>
-        <h2>Cycle through the original 151 pokemon</h2>
+        <h2>Search a pokemon</h2>
         <div id="searchbar">
             <input id="search" type="text" value="" placeholder="Find a Pokemon!">
             <input id="searchbutton" type="button" value="Capture!"></button></div>
@@ -31,26 +31,18 @@
         </div>
 
         <div id="img">
-            <img id="pokemonImage"/>
+            <img id="pokemon-img" src ="" />
         </div>
 
         <div id="btm-banner">
-                <div id="primary"><button>primary</button> </div>
-                <div id="secondary"><button>secondary</button> </div>
-                <div id="from"><button>evolved from</button> </div>
-                <div id="to"><button>evolving to</button></div>
+                <div id="height"></div>
+                <div id="weight"></div>
+                <div id="xp"></div>
+                <div id="ability"></div>
             </div>
         
         </div>
-    </div>
-    <div id="nav">
-        <div id="cyclebuttons">
-            <button id="prev">Previous</button>
-            <button id="next"><button>Next</button>
-        </div>
 
-
-    </div>
 
 </body>
 
