--- a/index.html
+++ b/index.html
@@ -17,19 +17,24 @@
         </form>
     </header>
 
-    <section>
+    <section class="title">
         <h1 id="pokemonName"></h1>
         <div id="pokemonImage"></div>
+        <img id="homeImage"/>
     </section>
     
     <section class="info">
-        <p id="id"></div>
-        <p id="name"></p>
-        <p id="height"></p>
-        <p id="weight"></p>
-        <p id="base_experience"></p>
-        <div class="ability"></div>
+        <div class="basic">
+            <p id="id"></p>
+            <p id="name"></p>
+            <p id="order"></p>
+            <p id="height"></p>
+            <p id="weight"></p>
+            <p id="base_experience"></p>
+        </div>
+
         <div class="move"></div>
+        <div class="ability"></div>
     </section>
 </body>
 </html>
