--- a/index.html
+++ b/index.html
@@ -16,28 +16,45 @@
   <body>
     <article class="innerBody">
     <h1 class="title">Pokemon API Return</h1>
-        <article>
         <div class="searchImage">
             <img src="./assets/pokemon1.jpeg" alt="Tpoic Image">
         </div>
             <div class="form">
                 <form>
-                    <input type="text"  value="" placeholder="Choose your pokemon!"  id="inputbar">
-                    <input type="button"  value="Click here" id="searchButton">
+                    <input type="text"  value="" placeholder="Type in your pokemon!"  id="inputbar">
+                    <input type="button"  value="Click here" class="searchButton" id="searchButton">
                 </form>
             </div>
-            <h2 id="pNameText"></h2> <h2 id="idNumber"></h2>
-            <h2 class="underline">Images</h2>
-            <div id="pFront"></div>
-            <div id="pSFront"></div>
-            <div id="pBack"></div>
-            <div id="pSBack"></div>
-            <h2 class="underline">Type</h2>
-            <div id="pType" class="types"></div>
-            <h2 class="underline">Abilities</h2>
-            <div id="pAbility" class="abilities"></div> 
-            <div>
-        </article>
+                <h2 id="pNameText"></h2> 
+                <h2 id="idNumber"></h2>
+                <hr>
+
+                <span id="hideElements1">
+                    <h2 class="underline">Images</h2>
+                </span>
+
+                <div id="pFront"></div>
+                <div id="pSFront"></div>
+                <div id="pBack"></div>
+                <div id="pSBack"></div>
+
+                <span id="hideElements2">
+                    <h2 class="underline">Type</h2>
+                </span>
+
+                <div id="pType" class="types"></div>
+
+                <span id="hideElements3">
+                    <h2 class="underline">Abilities List</h2>
+                </span>
+
+                <div id="pAbility"></div> 
+
+                <span id="hideElements4">
+                    <h2 class="underline">Moves List</h2>
+                </span>
+
+                <div id="pMoves"></div>
     </article>
   </body>
 </html>
